# sucoder

./: .envrc  .gitignore  LICENSE  Makefile  README.org  config.example.yaml  default_config.yaml  default_system_prompt.org  pyproject.toml
.claude/: settings.json
.claude/hooks/: protect-destructive.sh  protect-sensitive-files.sh
docs/: host-environment-setup.org
docs/examples/: org-authoring-demo.org
scripts/: fetch-agent-branches.sh  generate_unified_skills_catalog.py  setup-agent-user.sh
sucoder/: __init__.py  cli.py  config.py  executor.py  logging_utils.py  mirror.py  permissions.py  session.py  skills_version.py  startup_checks.py  tunnel.py  workspace_prefs.py
tests/: __init__.py  test_cli.py  test_config.py  test_mirror.py  test_remote.py  test_startup.py
